--- a/README
+++ b/README
@@ -4,7 +4,7 @@ for most of the basic security problems, SSL and ready to deploy on your favouri
 Back-end: app folder.
 
 Front-end: public folder.
-
+Seed: http://seed-sindt.rhcloud.com/
 
 Explain basic security terms like authentication, authorization, confidentiality, integrity, SSL/TLS and
 provide examples of how you have used them:
